--- a/templates/index.html
+++ b/templates/index.html
@@ -750,6 +750,6 @@
         </div>
     </div>
 
-    <script src="/static/app.js"></script>
+    <script src="static/app.js"></script>
 </body>
 </html>
