--- a/templates/index.html
+++ b/templates/index.html
@@ -675,7 +675,7 @@
                             </div>
                             <div>
                                 <label>体型</label>
-                                <select class="form-control" name="model_size" required>
+                                <select class="form-control" name="model_fit" required>
                                     <option value="">正在加载...</option>
                                 </select>
                             </div>
@@ -750,6 +750,6 @@
         </div>
     </div>
 
-    <script src="/static/app.js"></script>
+    <script src="static/app.js"></script>
 </body>
 </html>
